<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/tvDialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hasil_step"
        android:fontFamily="@font/archivonarrowbold"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginBottom="12dp"/>

    <TextView
        android:id="@+id/audiofilenamepreview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="No file selected"
        android:textSize="16sp"
        android:layout_marginTop="12dp" />

    <Button
        android:id="@+id/btnPlayAudioPreview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Play Audio"
        android:textColor="@color/black"
        android:layout_marginTop="12dp"
        android:enabled="false" />

    <TextView
        android:id="@+id/textOdg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ODG:"
        android:fontFamily="@font/archivonarrowbold"
        android:textStyle="bold"
        android:textSize="25dp"
        android:textColor="@color/black"
        android:layout_marginBottom="8dp"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/textSnr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SNR:"
        android:fontFamily="@font/archivonarrowbold"
        android:textStyle="bold"
        android:textSize="25dp"
        android:textColor="@color/black"
        android:layout_marginBottom="8dp"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/textPayload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Payload:"
        android:fontFamily="@font/archivonarrowbold"
        android:textStyle="bold"
        android:textSize="25dp"
        android:textColor="@color/black"
        android:layout_marginBottom="16dp"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/textBer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ber:"
        android:fontFamily="@font/archivonarrowbold"
        android:textStyle="bold"
        android:textSize="25dp"
        android:textColor="@color/black"
        android:layout_marginBottom="8dp"
        android:visibility="gone"/>

    <Button
        android:id="@+id/btnDownload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/download" />

    <Button
        android:id="@+id/btnClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/close" />
</LinearLayout>
