<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="loginpage.LoginFragment">


    <!-- Black Section -->
    <LinearLayout
        android:id="@+id/layoutBlackSection"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/dark_gray"
        app:layout_constraintWidth_default="spread"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.30"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- TextView di Tengah Atas -->
            <TextView
                android:id="@+id/tvHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/archivonarrowbold"
                android:gravity="center"
                android:text="@string/image_watermark"
                android:textColor="@color/teal_terang"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tvDeskripsi" />

            <!-- TextView deskripsi -->
            <TextView
                android:id="@+id/tvDeskripsi"
                android:layout_width="250dp"
                android:layout_height="47dp"
                android:fontFamily="@font/archivonarrowitalic"
                android:gravity="center"
                android:text="@string/deskripsi_image"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvHeader" />

            <!-- TextView di Tengah Bawah -->
            <TextView
                android:id="@+id/tvChoose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/archivonarrowbold"
                android:gravity="center"
                android:text="@string/choose_process"
                android:textColor="@color/teal_terang"
                android:textSize="26sp"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <!-- Back -->
    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/back_arrow"
        android:backgroundTint="@color/white"
        android:contentDescription="Back Button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginStart="15dp" />

    <!-- White Section -->
    <LinearLayout
        android:id="@+id/layoutWhiteSection"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:background="@drawable/hijau_di_welcomepage"
        android:padding="24dp"
        app:layout_constraintWidth_default="spread"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.70"
        app:layout_constraintTop_toBottomOf="@id/layoutBlackSection"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- image -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- CardView Embedding -->
            <androidx.cardview.widget.CardView
                android:id="@+id/cardEmbedding"
                android:layout_width="153dp"
                android:layout_height="153dp"
                android:elevation="6dp"
                app:cardCornerRadius="30dp"
                app:cardBackgroundColor="@android:color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="8dp">

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:src="@drawable/embedding"
                        app:tint="@color/black"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/Embedding"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"
                        android:fontFamily="@font/archivonarrowbold"
                        android:gravity="center" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <!-- CardView Attacking -->
            <androidx.cardview.widget.CardView
                android:id="@+id/cardAttacking"
                android:layout_width="153dp"
                android:layout_height="153dp"
                android:elevation="6dp"
                app:cardCornerRadius="30dp"
                app:cardBackgroundColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="8dp">

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:src="@drawable/attacking"
                        app:tint="@color/black"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/Attacking"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"
                        android:fontFamily="@font/archivonarrowbold"
                        android:gravity="center" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- CardView Extraction -->
            <androidx.cardview.widget.CardView
                android:id="@+id/cardExtraction"
                android:layout_width="153dp"
                android:layout_height="153dp"
                android:elevation="6dp"
                app:cardCornerRadius="30dp"
                app:cardBackgroundColor="@android:color/white"
                app:layout_constraintTop_toBottomOf="@id/cardEmbedding"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="8dp">

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:src="@drawable/extraction"
                        app:tint="@color/black"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/Extraction"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"
                        android:fontFamily="@font/archivonarrowbold"
                        android:gravity="center" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Deskripsi -->
        <LinearLayout
            android:id="@+id/step4"
            android:layout_width="match_parent"
            android:layout_height="142dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/step"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <!-- Text Content -->
                <TextView
                    android:id="@+id/embedding_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/archivonarrowitalic"
                    android:gravity="center"
                    android:text="@string/deskripsi_embedd"
                    android:textColor="@android:color/black"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/extraction_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:fontFamily="@font/archivonarrowitalic"
                    android:gravity="center"
                    android:text="@string/deskripsi_attacking"
                    android:textColor="@android:color/black"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/embedding_text" />

                <TextView
                    android:id="@+id/attacking_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:fontFamily="@font/archivonarrowitalic"
                    android:gravity="center"
                    android:text="@string/deskripsi_ektraksi"
                    android:textColor="@android:color/black"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/extraction_text" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
